k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshop-backend
  labels:
    app: webshop-backend
spec:
  type: ClusterIP
  selector:
    app: webshop-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
