k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webshop-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - webshop.api.oskott.com
      secretName: webshop-backend-tls
  rules:
    - host: webshop.api.oskott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webshop-backend
                port:
                  number: 8080
